objects/ortoo_qra__Assignee_Log__c.object
<CustomObject>
    <description>Assignee (user/queue) log</description>
    <fields>
        <fullName>ortoo_qra__Active_Assignments__c</fullName>
        <formula>ortoo_qra__Active_Case_Assignments__c  +  ortoo_qra__Active_Lead_Assignments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Active_Case_Assignments__c</fullName>
        <description>Active case assignments</description>
        <label>Active Case Assignments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Active_Lead_Assignments__c</fullName>
        <description>Active lead assignments</description>
        <label>Active Lead Assignments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignment group member</description>
        <label>Assignment Group Member</label>
        <referenceTo>ortoo_qra__Assignment_Group_Member__c</referenceTo>
        <relationshipLabel>Assignee Log</relationshipLabel>
        <relationshipName>Assignee_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Case_Quota_Assigned__c</fullName>
        <description>Case quota assigned this quota period</description>
        <label>Case Quota Assigned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Case_Recalculate_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case recalculate required</description>
        <label>Case Recalculate Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Assignment_Seq__c</fullName>
        <description>Last assignment sequence number</description>
        <label>Last Assignment Seq</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Assignment__c</fullName>
        <description>Last assignment date</description>
        <label>Last Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Lead_Quota_Assigned__c</fullName>
        <description>Lead quota assigned this quota period</description>
        <label>Lead Quota Assigned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Lead_Recalculate_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead recalculate required</description>
        <label>Lead Recalculate Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User id</description>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignee_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignee Log</label>
    <nameField>
        <label>Assignee Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignee Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>